--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -114,7 +114,16 @@
           <h2 class="section-title" data-i18="video">Video</h2>
         </div>
         <div class="video-player">
+          <video class="video-player__viewer" src="assets/video/video.mp4"></video>
           <button class="video-player__button" type="button"></button>
+          <div class="video-player__control-panel">
+            <button class="control-panel__play control-button"></button>
+            <div class="control-panel__progress-bar">
+              <div class="progress-bar__fill"></div>
+            </div>
+            <input class="control-panel__volume" type="range" name="volume" min="0" max="1" step="0.05" calue="1">
+            <button class="control-panel__fullscreen control-button"></button>
+          </div>
         </div>
       </section>
       <section id="price" class="price section">
