--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -119,7 +119,7 @@
           <div class="video-player__control-panel">
             <button class="control-panel__play control-button"></button>
             <div class="control-panel__progress-bar">
-              <div class="progress-bar__fill"></div>
+              <div class="progress-bar__fill"><span class="fill__thumb"></span></div>
             </div>
             <button class="control-button__volume-button control-button"></button>
             <input class="control-panel__volume-range" type="range" name="volume" min="0" max="1" step="0.05" value="0.5"></input>
