feat: add loading screen and animation

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -9,7 +9,13 @@
   <link href="./assets/svg/favicon.ico" rel="icon">
 </head>
 <body class="body">
-  <div class="preload"></div>
+  <div class="preload">
+    <span class="preload__loading"></span>
+    <span class="preload__loading"></span>
+    <span class="preload__loading"></span>
+    <span class="preload__loading"></span>
+    <span class="preload__loading"></span>
+  </div>
   <div class="background-wrapper">
     <figure class="background"></figure>
   </div>
