fix: fix the autochecked menu item

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -24,7 +24,7 @@
     <nav class="header__artists">
       <ul class="artists-list list">
         <li class="artists-list__item list-item">
-          <input type="radio" name="artists" id="awfultune" value="awfultune" data-artist="awfultune" class="artist">
+          <input type="radio" name="artists" id="awfultune" value="awfultune" data-artist="awfultune" class="artist" checked="checked">
           <label class="artist__name text-elem" for="awfultune">awfultune</label>
         </li>
         <li class="artists-list__item list-item">
